--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,24 @@
+asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
+dj-database-url==0.5.0
+Django==4.0.6
+gunicorn==20.1.0
+idna==3.3
+psycopg2==2.9.3
+requests==2.28.1
+sqlparse==0.4.2
+tzdata==2022.1
+urllib3==1.26.11
+whitenoise==6.2.0
 cryptography==3.2.1
-Flask==1.1.2
-Flask-Caching==1.8.0
+Flask==1.1.4
+Flask-Caching==1.10.0
 Flask-Session==0.3.2
 Flask-DebugToolbar==0.11.0
 PyLTI1p3==1.9.1
+Werkzeug==1.0.1
+jinja2==2.10.2
+markupsafe==1.1.1
+itsdangerous==1.1.0
+
